--- a/configs/keyboard-layouts/cros-sarien.conf
+++ b/configs/keyboard-layouts/cros-sarien.conf
@@ -15,6 +15,7 @@ prog1 = brightnessup
 mute = mute
 volumedown = volumedown
 volumeup = volumeup
+f10 = print
 # the lock button is mapped to sleep by default
 sleep = coffee
 
