--- a/configs/keyboard-layouts/cros-sarien.conf
+++ b/configs/keyboard-layouts/cros-sarien.conf
@@ -30,9 +30,8 @@ prog1 = f6
 mute = f7
 volumedown = f8
 volumeup = f9
-# no need for F10 as F10 is already recognized as F10
-# no need for F11 as the fullscreen button is mapped to f11
-switchvideomode = f12
+print = f10
+# no need for F11 as the fullscreen button is mapped to f11switchvideomode = f12
 
 
 ######## ChromeOS shortcuts ########
